# chip-8-emulator

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
include/: chip_8.hpp  key_board.hpp  monitor.hpp  operand.hpp  utils.hpp
src/: chip_8.cpp  key_board.cpp  main.cpp  monitor.cpp  operand.cpp  utils.cpp
test/: CMakeLists.txt  test_debug_print.cpp  test_monitor.cpp
